fix layout bug

--- a/src/Pages/Dashboard/Dashboard.less
+++ b/src/Pages/Dashboard/Dashboard.less
@@ -111,20 +111,20 @@
 
 .my-gyms-header {
   display: grid;
-  gap: 10px;
+  gap: 20px;
 
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 
   @media (max-width: 1200px) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, 3);
   }
 
   @media (max-width: 900px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, 2);
   }
 
   @media (max-width: 600px) {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(auto-fill, 1);
   }
 }
 
